--- a/Draw/Controller/Registration/RemoteDrawView.xib
+++ b/Draw/Controller/Registration/RemoteDrawView.xib
@@ -42,6 +42,8 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{84, 110}</string>
 						<reference key="NSSuperview" ref="663035640"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="276753856"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -55,11 +57,13 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 98}, {22, 22}}</string>
 						<reference key="NSSuperview" ref="663035640"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="928845033"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
-							<object class="NSColorSpace" key="NSCustomColorSpace">
+							<object class="NSColorSpace" key="NSCustomColorSpace" id="413048472">
 								<int key="NSID">2</int>
 							</object>
 						</object>
@@ -71,6 +75,8 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{23, 98}, {42, 22}}</string>
 						<reference key="NSSuperview" ref="663035640"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="492211785">
 							<int key="NSColorSpace">3</int>
@@ -104,6 +110,8 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 20}, {84, 75}}</string>
 						<reference key="NSSuperview" ref="663035640"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="923733845"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -131,10 +139,26 @@
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
+					<object class="IBUIView" id="923733845">
+						<reference key="NSNextResponder" ref="663035640"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{0, 20}, {84, 75}}</string>
+						<reference key="NSSuperview" ref="663035640"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="376002046"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<object class="NSColor" key="IBUIBackgroundColor">
+							<int key="NSColorSpace">3</int>
+							<bytes key="NSWhite">MQA</bytes>
+							<reference key="NSCustomColorSpace" ref="413048472"/>
+						</object>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+					</object>
 				</array>
 				<string key="NSFrameSize">{84, 120}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSNextKeyView"/>
+				<reference key="NSWindow"/>
+				<reference key="NSNextKeyView" ref="725126294"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="492211785"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -166,6 +190,14 @@
 					</object>
 					<int key="connectionID">12</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">showDrawView</string>
+						<reference key="source" ref="663035640"/>
+						<reference key="destination" ref="923733845"/>
+					</object>
+					<int key="connectionID">14</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -194,6 +226,7 @@
 							<reference ref="376002046"/>
 							<reference ref="928845033"/>
 							<reference ref="276753856"/>
+							<reference ref="923733845"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -217,6 +250,11 @@
 						<reference key="object" ref="276753856"/>
 						<reference key="parent" ref="663035640"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">13</int>
+						<reference key="object" ref="923733845"/>
+						<reference key="parent" ref="663035640"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -224,6 +262,8 @@
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="11.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="13.CustomClassName">ShowDrawView</string>
+				<string key="13.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.CustomClassName">RemoteDrawView</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -235,9 +275,60 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">12</int>
+			<int key="maxID">14</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">HJManagedImageV</string>
+					<string key="superclassName">UIView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/HJManagedImageV.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">RemoteDrawView</string>
+					<string key="superclassName">UIView</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="avatarImage">HJManagedImageV</string>
+						<string key="nickNameLabel">UILabel</string>
+						<string key="paintButton">UIButton</string>
+						<string key="showDrawView">ShowDrawView</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="avatarImage">
+							<string key="name">avatarImage</string>
+							<string key="candidateClassName">HJManagedImageV</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="nickNameLabel">
+							<string key="name">nickNameLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="paintButton">
+							<string key="name">paintButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="showDrawView">
+							<string key="name">showDrawView</string>
+							<string key="candidateClassName">ShowDrawView</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/RemoteDrawView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">ShowDrawView</string>
+					<string key="superclassName">UIView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/ShowDrawView.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
