--- a/Draw/Controller/Registration/RemoteDrawView~ipad.xib
+++ b/Draw/Controller/Registration/RemoteDrawView~ipad.xib
@@ -54,14 +54,14 @@
 					<object class="IBUIView" id="456139078">
 						<reference key="NSNextResponder" ref="798582094"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{0, 196}, {44, 44}}</string>
+						<string key="NSFrame">{{0, 202}, {40, 40}}</string>
 						<reference key="NSSuperview" ref="798582094"/>
 						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
-							<object class="NSColorSpace" key="NSCustomColorSpace">
+							<object class="NSColorSpace" key="NSCustomColorSpace" id="1041257640">
 								<int key="NSID">2</int>
 							</object>
 						</object>
@@ -71,7 +71,7 @@
 					<object class="IBUILabel" id="31400751">
 						<reference key="NSNextResponder" ref="798582094"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{47, 196}, {84, 44}}</string>
+						<string key="NSFrame">{{49, 196}, {111, 44}}</string>
 						<reference key="NSSuperview" ref="798582094"/>
 						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -102,10 +102,24 @@
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
+					<object class="IBUIView" id="245986676">
+						<reference key="NSNextResponder" ref="798582094"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{0, 45}, {168, 150}}</string>
+						<reference key="NSSuperview" ref="798582094"/>
+						<reference key="NSWindow"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<object class="NSColor" key="IBUIBackgroundColor">
+							<int key="NSColorSpace">3</int>
+							<bytes key="NSWhite">MQA</bytes>
+							<reference key="NSCustomColorSpace" ref="1041257640"/>
+						</object>
+						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+					</object>
 					<object class="IBUIButton" id="889201480">
 						<reference key="NSNextResponder" ref="798582094"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{0, 20}, {168, 150}}</string>
+						<string key="NSFrame">{{0, 45}, {168, 150}}</string>
 						<reference key="NSSuperview" ref="798582094"/>
 						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -170,6 +184,14 @@
 					</object>
 					<int key="connectionID">11</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">showDrawView</string>
+						<reference key="source" ref="798582094"/>
+						<reference key="destination" ref="245986676"/>
+					</object>
+					<int key="connectionID">13</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -194,17 +216,13 @@
 						<int key="objectID">4</int>
 						<reference key="object" ref="798582094"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="889201480"/>
 							<reference ref="31400751"/>
 							<reference ref="456139078"/>
 							<reference ref="694549735"/>
+							<reference ref="245986676"/>
+							<reference ref="889201480"/>
 						</array>
 						<reference key="parent" ref="0"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">5</int>
-						<reference key="object" ref="889201480"/>
-						<reference key="parent" ref="798582094"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">6</int>
@@ -221,12 +239,25 @@
 						<reference key="object" ref="694549735"/>
 						<reference key="parent" ref="798582094"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">12</int>
+						<reference key="object" ref="245986676"/>
+						<array class="NSMutableArray" key="children"/>
+						<reference key="parent" ref="798582094"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">5</int>
+						<reference key="object" ref="889201480"/>
+						<reference key="parent" ref="798582094"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="12.CustomClassName">ShowDrawView</string>
+				<string key="12.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.CustomClassName">RemoteDrawView</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -239,7 +270,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">11</int>
+			<int key="maxID">13</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -258,6 +289,7 @@
 						<string key="avatarImage">HJManagedImageV</string>
 						<string key="nickNameLabel">UILabel</string>
 						<string key="paintButton">UIButton</string>
+						<string key="showDrawView">ShowDrawView</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
 						<object class="IBToOneOutletInfo" key="avatarImage">
@@ -272,10 +304,22 @@
 							<string key="name">paintButton</string>
 							<string key="candidateClassName">UIButton</string>
 						</object>
+						<object class="IBToOneOutletInfo" key="showDrawView">
+							<string key="name">showDrawView</string>
+							<string key="candidateClassName">ShowDrawView</string>
+						</object>
 					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/RemoteDrawView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">ShowDrawView</string>
+					<string key="superclassName">UIView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/ShowDrawView.h</string>
 					</object>
 				</object>
 			</array>
