--- a/Draw/Controller/Room/RoomCell.xib
+++ b/Draw/Controller/Room/RoomCell.xib
@@ -44,7 +44,7 @@
 							<object class="IBUILabel" id="64556621">
 								<reference key="NSNextResponder" ref="380575889"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{72, 5}, {140, 21}}</string>
+								<string key="NSFrame">{{79, 19}, {140, 21}}</string>
 								<reference key="NSSuperview" ref="380575889"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="945254090"/>
@@ -58,30 +58,30 @@
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<string key="IBUIText">甘米的房间</string>
-								<object class="NSColor" key="IBUITextColor">
-									<int key="NSColorSpace">2</int>
-									<bytes key="NSRGB">MC40MjM1Mjk0MTE4IDAuMTkyMTU2ODYyNyAwLjAzMTM3MjU0OTAyAA</bytes>
+								<object class="NSColor" key="IBUITextColor" id="1073493964">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MC42MDAwMDAwMjM4IDAuNDAwMDAwMDA2IDAuMjAwMDAwMDAzAA</bytes>
 								</object>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">1</int>
 								<float key="IBUIMinimumFontSize">10</float>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
 									<int key="type">1</int>
-									<double key="pointSize">17</double>
+									<double key="pointSize">13</double>
 								</object>
 								<object class="NSFont" key="IBUIFont">
 									<string key="NSName">Helvetica</string>
-									<double key="NSSize">17</double>
+									<double key="NSSize">13</double>
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
 							<object class="IBUILabel" id="945254090">
 								<reference key="NSNextResponder" ref="380575889"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{222, 5}, {64, 21}}</string>
+								<int key="NSvFlags">-2147483356</int>
+								<string key="NSFrame">{{173, 5}, {64, 21}}</string>
 								<reference key="NSSuperview" ref="380575889"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="21839038"/>
+								<reference key="NSNextKeyView" ref="665233394"/>
 								<reference key="IBUIBackgroundColor" ref="785173849"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -110,51 +110,47 @@
 							<object class="IBUIImageView" id="150524547">
 								<reference key="NSNextResponder" ref="380575889"/>
 								<int key="NSvFlags">-2147483356</int>
-								<string key="NSFrame">{{18, 6}, {36, 37}}</string>
+								<string key="NSFrame">{{6, 6}, {57, 57}}</string>
 								<reference key="NSSuperview" ref="380575889"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="64556621"/>
+								<reference key="NSNextKeyView" ref="318460792"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
 							<object class="IBUILabel" id="21839038">
 								<reference key="NSNextResponder" ref="380575889"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{2, 44}, {68, 21}}</string>
+								<string key="NSFrame">{{79, 1}, {140, 21}}</string>
 								<reference key="NSSuperview" ref="380575889"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="665233394"/>
+								<reference key="NSNextKeyView" ref="64556621"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<string key="IBUIText">甘米</string>
-								<object class="NSColor" key="IBUITextColor">
-									<int key="NSColorSpace">3</int>
-									<bytes key="NSWhite">MC4zMzMzMzMzMzMzAA</bytes>
-								</object>
+								<reference key="IBUITextColor" ref="1073493964"/>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">1</int>
 								<float key="IBUIMinimumFontSize">8</float>
-								<int key="IBUITextAlignment">1</int>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
 									<int key="type">1</int>
-									<double key="pointSize">13</double>
+									<double key="pointSize">12</double>
 								</object>
 								<object class="NSFont" key="IBUIFont">
 									<string key="NSName">Helvetica</string>
-									<double key="NSSize">13</double>
+									<double key="NSSize">12</double>
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
 							<object class="IBUIButton" id="396181618">
 								<reference key="NSNextResponder" ref="380575889"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{228, 32}, {53, 31}}</string>
+								<string key="NSFrame">{{228, 19}, {72, 31}}</string>
 								<reference key="NSSuperview" ref="380575889"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="318460792"/>
+								<reference key="NSNextKeyView"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
@@ -178,22 +174,22 @@
 								</object>
 								<object class="NSCustomResource" key="IBUINormalBackgroundImage">
 									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">green_button@2x.png</string>
+									<string key="NSResourceName">orange_button@2x.png</string>
 								</object>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="18275758">
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="703222094">
 									<int key="type">2</int>
-									<double key="pointSize">10</double>
+									<double key="pointSize">14</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="889921355">
+								<object class="NSFont" key="IBUIFont" id="1031203996">
 									<string key="NSName">Helvetica-Bold</string>
-									<double key="NSSize">10</double>
+									<double key="NSSize">14</double>
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
 							<object class="IBUILabel" id="665233394">
 								<reference key="NSNextResponder" ref="380575889"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{72, 27}, {140, 36}}</string>
+								<string key="NSFrame">{{79, 36}, {151, 36}}</string>
 								<reference key="NSSuperview" ref="380575889"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="396181618"/>
@@ -202,39 +198,36 @@
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<string key="IBUIText">Gamy、Pipi Peng、 Kira等4人正在游戏中</string>
-								<object class="NSColor" key="IBUITextColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
-								</object>
+								<string key="IBUIText">[已满]3人正在游戏中(Benson, Gamy, Kira...)</string>
+								<reference key="IBUITextColor" ref="1073493964"/>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">1</int>
 								<float key="IBUIMinimumFontSize">9</float>
 								<int key="IBUINumberOfLines">2</int>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
 									<int key="type">1</int>
-									<double key="pointSize">12</double>
+									<double key="pointSize">10</double>
 								</object>
 								<object class="NSFont" key="IBUIFont">
 									<string key="NSName">Helvetica</string>
-									<double key="NSSize">12</double>
+									<double key="NSSize">10</double>
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
 							<object class="IBUIButton" id="318460792">
 								<reference key="NSNextResponder" ref="380575889"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{245, 34}, {36, 27}}</string>
+								<string key="NSFrame">{{29, -1}, {49, 27}}</string>
 								<reference key="NSSuperview" ref="380575889"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
+								<reference key="NSNextKeyView" ref="21839038"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
 								<string key="IBUITitleShadowOffset">{0, 1}</string>
-								<string key="IBUINormalTitle">新邀请</string>
+								<string key="IBUINormalTitle">New</string>
 								<reference key="IBUIHighlightedTitleColor" ref="410615766"/>
 								<object class="NSColor" key="IBUINormalTitleColor">
 									<int key="NSColorSpace">1</int>
@@ -244,13 +237,13 @@
 								<reference key="IBUINormalTitleShadowColor" ref="877573794"/>
 								<object class="NSCustomResource" key="IBUINormalBackgroundImage">
 									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">red_button@2x.png</string>
+									<string key="NSResourceName">number@2x.png</string>
 								</object>
-								<reference key="IBUIFontDescription" ref="18275758"/>
-								<reference key="IBUIFont" ref="889921355"/>
+								<reference key="IBUIFontDescription" ref="703222094"/>
+								<reference key="IBUIFont" ref="1031203996"/>
 							</object>
 						</array>
-						<string key="NSFrameSize">{320, 64}</string>
+						<string key="NSFrameSize">{320, 69}</string>
 						<reference key="NSSuperview" ref="297589441"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="150524547"/>
@@ -262,7 +255,7 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{320, 65}</string>
+				<string key="NSFrameSize">{320, 70}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="380575889"/>
@@ -356,12 +349,12 @@
 						<reference key="object" ref="297589441"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="150524547"/>
-							<reference ref="21839038"/>
-							<reference ref="64556621"/>
 							<reference ref="945254090"/>
 							<reference ref="396181618"/>
-							<reference ref="665233394"/>
+							<reference ref="64556621"/>
+							<reference ref="21839038"/>
 							<reference ref="318460792"/>
+							<reference ref="665233394"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -493,8 +486,8 @@
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="green_button@2x.png">{71, 84}</string>
-			<string key="red_button@2x.png">{71, 84}</string>
+			<string key="number@2x.png">{50, 45}</string>
+			<string key="orange_button@2x.png">{71, 84}</string>
 		</dictionary>
 		<string key="IBCocoaTouchPluginVersion">933</string>
 	</data>
