--- a/Draw/Controller/Chat/MessageCell~ipad.xib
+++ b/Draw/Controller/Chat/MessageCell~ipad.xib
@@ -33,7 +33,7 @@
 			</object>
 			<object class="IBUITableViewCell" id="659152481">
 				<reference key="NSNextResponder"/>
-				<int key="NSvFlags">292</int>
+				<int key="NSvFlags">319</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIView" id="550358933">
 						<reference key="NSNextResponder" ref="659152481"/>
@@ -42,9 +42,8 @@
 							<object class="IBUIButton" id="837436588">
 								<reference key="NSNextResponder" ref="550358933"/>
 								<int key="NSvFlags">-2147483329</int>
-								<string key="NSFrameSize">{89, 40}</string>
+								<string key="NSFrameSize">{254, 81}</string>
 								<reference key="NSSuperview" ref="550358933"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="474318270"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor" id="192468249">
@@ -63,22 +62,22 @@
 									<bytes key="NSWhite">MAA</bytes>
 								</object>
 								<reference key="IBUINormalTitleShadowColor" ref="192468249"/>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="256109157">
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="637186452">
 									<int key="type">2</int>
-									<double key="pointSize">14</double>
+									<double key="pointSize">28</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="421496382">
+								<object class="NSFont" key="IBUIFont" id="875726650">
 									<string key="NSName">Helvetica-Bold</string>
-									<double key="NSSize">14</double>
+									<double key="NSSize">28</double>
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
 							<object class="IBUIButton" id="474318270">
 								<reference key="NSNextResponder" ref="550358933"/>
 								<int key="NSvFlags">-2147483329</int>
-								<string key="NSFrame">{{90, 0}, {89, 40}}</string>
+								<string key="NSFrame">{{257, 0}, {254, 81}}</string>
 								<reference key="NSSuperview" ref="550358933"/>
-								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="340030641"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="192468249"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -90,15 +89,14 @@
 								<reference key="IBUIHighlightedTitleColor" ref="192468249"/>
 								<reference key="IBUINormalTitleColor" ref="128111803"/>
 								<reference key="IBUINormalTitleShadowColor" ref="192468249"/>
-								<reference key="IBUIFontDescription" ref="256109157"/>
-								<reference key="IBUIFont" ref="421496382"/>
+								<reference key="IBUIFontDescription" ref="637186452"/>
+								<reference key="IBUIFont" ref="875726650"/>
 							</object>
 							<object class="IBUIButton" id="340030641">
 								<reference key="NSNextResponder" ref="550358933"/>
 								<int key="NSvFlags">-2147483329</int>
-								<string key="NSFrame">{{180, 0}, {89, 40}}</string>
+								<string key="NSFrame">{{514, 0}, {254, 81}}</string>
 								<reference key="NSSuperview" ref="550358933"/>
-								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="192468249"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -110,13 +108,12 @@
 								<reference key="IBUIHighlightedTitleColor" ref="192468249"/>
 								<reference key="IBUINormalTitleColor" ref="128111803"/>
 								<reference key="IBUINormalTitleShadowColor" ref="192468249"/>
-								<reference key="IBUIFontDescription" ref="256109157"/>
-								<reference key="IBUIFont" ref="421496382"/>
+								<reference key="IBUIFontDescription" ref="637186452"/>
+								<reference key="IBUIFont" ref="875726650"/>
 							</object>
 						</array>
-						<string key="NSFrameSize">{269, 39}</string>
+						<string key="NSFrameSize">{768, 79}</string>
 						<reference key="NSSuperview" ref="659152481"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="837436588"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -130,9 +127,8 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{269, 40}</string>
+				<string key="NSFrameSize">{768, 80}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="550358933"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
@@ -238,37 +234,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">19</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">MessageCell</string>
-					<string key="superclassName">PPTableViewCell</string>
-					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">clickMessage:</string>
-						<string key="NS.object.0">id</string>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">clickMessage:</string>
-						<object class="IBActionInfo" key="NS.object.0">
-							<string key="name">clickMessage:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/MessageCell.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">PPTableViewCell</string>
-					<string key="superclassName">UITableViewCell</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/PPTableViewCell.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
