--- a/Draw/Controller/Registration/RemoteDrawView~ipad.xib
+++ b/Draw/Controller/Registration/RemoteDrawView~ipad.xib
@@ -40,7 +40,7 @@
 					<object class="IBUIImageView" id="694549735">
 						<reference key="NSNextResponder" ref="798582094"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrameSize">{168, 230}</string>
+						<string key="NSFrameSize">{172, 230}</string>
 						<reference key="NSSuperview" ref="798582094"/>
 						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -54,7 +54,7 @@
 					<object class="IBUIView" id="456139078">
 						<reference key="NSNextResponder" ref="798582094"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{0, 202}, {40, 40}}</string>
+						<string key="NSFrame">{{7, 203}, {40, 40}}</string>
 						<reference key="NSSuperview" ref="798582094"/>
 						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -71,7 +71,7 @@
 					<object class="IBUILabel" id="31400751">
 						<reference key="NSNextResponder" ref="798582094"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{49, 196}, {111, 44}}</string>
+						<string key="NSFrame">{{57, 196}, {111, 44}}</string>
 						<reference key="NSSuperview" ref="798582094"/>
 						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -105,7 +105,7 @@
 					<object class="IBUIView" id="245986676">
 						<reference key="NSNextResponder" ref="798582094"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{0, 45}, {168, 150}}</string>
+						<string key="NSFrame">{{0, 45}, {172, 150}}</string>
 						<reference key="NSSuperview" ref="798582094"/>
 						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -119,7 +119,7 @@
 					<object class="IBUIButton" id="889201480">
 						<reference key="NSNextResponder" ref="798582094"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{0, 45}, {168, 150}}</string>
+						<string key="NSFrame">{{0, 45}, {172, 150}}</string>
 						<reference key="NSSuperview" ref="798582094"/>
 						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -150,7 +150,7 @@
 						</object>
 					</object>
 				</array>
-				<string key="NSFrameSize">{168, 240}</string>
+				<string key="NSFrameSize">{172, 240}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -178,19 +178,28 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">paintButton</string>
-						<reference key="source" ref="798582094"/>
-						<reference key="destination" ref="889201480"/>
-					</object>
-					<int key="connectionID">11</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">showDrawView</string>
 						<reference key="source" ref="798582094"/>
 						<reference key="destination" ref="245986676"/>
 					</object>
 					<int key="connectionID">13</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">playbackButton</string>
+						<reference key="source" ref="798582094"/>
+						<reference key="destination" ref="889201480"/>
+					</object>
+					<int key="connectionID">14</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">clickPlaybackButton:</string>
+						<reference key="source" ref="889201480"/>
+						<reference key="destination" ref="798582094"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">15</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -270,7 +279,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">13</int>
+			<int key="maxID">15</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -285,10 +294,21 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">RemoteDrawView</string>
 					<string key="superclassName">UIView</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">clickPlaybackButton:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">clickPlaybackButton:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">clickPlaybackButton:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="avatarImage">HJManagedImageV</string>
 						<string key="nickNameLabel">UILabel</string>
-						<string key="paintButton">UIButton</string>
+						<string key="playbackButton">UIButton</string>
 						<string key="showDrawView">ShowDrawView</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
@@ -300,8 +320,8 @@
 							<string key="name">nickNameLabel</string>
 							<string key="candidateClassName">UILabel</string>
 						</object>
-						<object class="IBToOneOutletInfo" key="paintButton">
-							<string key="name">paintButton</string>
+						<object class="IBToOneOutletInfo" key="playbackButton">
+							<string key="name">playbackButton</string>
 							<string key="candidateClassName">UIButton</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="showDrawView">
